--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>I'm a mechatronics engineering student with experience in a variety of industries, ranging from aerospace robotics to financial tech.
-                      I'm currently seeking a summer 2020 co-op position focused on robotics, embedded systems, or computer vision.
+                      I'm currently seeking a Winter 2021 co-op position focused on robotics, perception, or computer vision.
                       </p>
                 </div>
                 <div class="col-lg-4">
@@ -171,13 +171,14 @@
                         <h3>Education</h3>
                         <p>University of Waterloo
                           <br>BASc in Mechatronics Engineering
+                          <br>Artificial Intelligence Specialization
                           <br>2017-2022</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Contact</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="mailto:rebutler@edu.uwaterloo.ca" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                                <a href="mailto:rebutler@uwaterloo.ca" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
                             </li>
                             <li>
                                 <a href="tel:647-832-6034" class="btn-social btn-outline"><i class="fa fa-fw fa-phone"></i></a>
@@ -236,7 +237,7 @@
                                When the user moves with the walker, data is recorded about their current position using a Simulink model. 
                                The goal is to predict how the user will move next, and if they deviate from the desired path, the walker can steer them in the right direction. <br> <br>
                                I worked on this project with the Neural and Rehabilitation Engineering lab team under Professor James Tung, where I was a research assistant.
-                               I contributed to the Arduino programming and sensor interfacing. <br> <br>
+                               I contributed to the Arduino programming and physical construction. <br> <br>
                                More information on the project can be found here: <a href="https://uwspace.uwaterloo.ca/handle/10012/13912?show=full">Waterloo Robotic Rollator</a>
                             </p>
                             <ul class="list-inline item-details">
@@ -318,7 +319,7 @@
                                A Python script then uses this data to plot locations on a map using the Google Maps Plotter API.
                                <br><br>
                                I completed this project during the Make UofT Hackathon in a group of 3. My role was to write the Python script to collect data from the SQL database.
-                               
+                               See the code here: <a href="https://github.com/rebecca-butler/Pothole-Finder">Pothole Finder</a>
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
@@ -401,8 +402,7 @@
                                After reading each of the notes, the stylus swivels to play the correct notes of the song.
                                <br><br>
                                A LEGO EV3 robot was used as the base model, with additional 3D printed and laser cut parts added. 
-                               The robot was programmed in C. 
-                               A colour sensor was used to read the notes, and an ultrasonic sensor detected if a hand was placed in front of the robot to indicate when it should stop.
+                               The robot was programmed in C, available here: <a href="https://github.com/rebecca-butler/Piano-Bot">Piano Bot</a>
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
@@ -440,6 +440,7 @@
                             <p>I developed a Minesweeper game in C that runs on a Keil development board. 
                                The game randomly distributes mines on a 9x9 grid and allows users to place flags or dig up mines.
                                The player selects squares on the grid using a joystick, and uses one of two pushbuttons to place flags or dig.
+                                Check out the code here: <a href="https://github.com/rebecca-butler/Minesweeper">Minesweeper</a>
                                <br><br>
                           </p>
                             <ul class="list-inline item-details">
