--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fura.jpg?v=1566931943144" class="img-responsive" alt="">
+                        <img src="images/WatCounts design.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -149,8 +149,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a mechatronics engineering student with experience in a variety of industries, ranging from aerospace robotics to financial tech.
-                      I'm currently seeking a Winter 2021 co-op position focused on robotics, perception, or computer vision.
+                    <p>I'm a fourth year Mechatronics Engineering student with experience in robotics, perception, and computer vision.
+                      I'm currently seeking a Summer 2021 co-op position. Don't hesitate to reach out if you think I might be a good fit!
                       </p>
                 </div>
                 <div class="col-lg-4">
@@ -203,7 +203,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Rebecca Butler 2019
+                        Copyright &copy; Rebecca Butler 2021
                     </div>
                 </div>
             </div>
@@ -230,23 +230,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Waterloo Robotic Rollator</h2>
+                            <h2>WatCounts</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69445809_449823795627483_6030977439067275264_n.jpg?v=1566867410439" class="img-responsive img-centered" alt="">
-                            <p>This walker uses four Arduino boards to implement various sensors, including an accelerometer, IMU, and force sensors.
-                               When the user moves with the walker, data is recorded about their current position using a Simulink model. 
-                               The goal is to predict how the user will move next, and if they deviate from the desired path, the walker can steer them in the right direction. <br> <br>
-                               I worked on this project with the Neural and Rehabilitation Engineering lab team under Professor James Tung, where I was a research assistant.
-                               I contributed to the Arduino programming and physical construction. <br> <br>
-                               More information on the project can be found here: <a href="https://uwspace.uwaterloo.ca/handle/10012/13912?show=full">Waterloo Robotic Rollator</a>
+                            <img src="images/WatCounts.PNG" class="img-responsive img-centered" alt="">
+                            <p> WatCounts is an occupancy tracking application designed for the University of Waterloo. 
+                                The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
+                                I implemented human detection using the pre-trained OpenCV linear SVM. 
+                                I then wrote a centroid tracking algorithm to determine the direction each person was moving in and 
+                                register or deregister object IDs when needed.
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>Sept - Dec 2018
+                                    <strong>Sept - Dec 2020
                                     </strong>
                                 </li>
                                 <li>Technologies:
-                                    <strong>Arduino, MATLAB, Simulink, sensors
+                                    <strong>Raspberry Pi, Python, Picamera, OpenCV, HOGCV
                                     </strong>
                                 </li>
                             </ul>
