--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/WatCounts.png" class="img-responsive" alt="" width="498" height="360">
+                        <img src="images/watcounts-design.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>I'm a fourth year Mechatronics Engineering student with experience in robotics, perception, and computer vision.
-                      I'm currently seeking a Summer 2021 co-op position. Don't hesitate to reach out if you think I might be a good fit!
+                      I'm currently seeking a Summer 2021 co-op position. Don't hesitate to reach out if you want to chat with me!
                       </p>
                 </div>
                 <div class="col-lg-4">
@@ -232,7 +232,7 @@
                         <div class="modal-body">
                             <h2>WatCounts</h2>
                             <hr class="star-primary">
-                            <img src="images/WatCounts design.PNG" class="img-responsive img-centered" alt="">
+                            <img src="images/WatCounts.PNG" class="img-responsive img-centered" alt="">
                             <p> WatCounts is an occupancy tracking application designed for the University of Waterloo. 
                                 The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
                                 I implemented human detection using the pre-trained OpenCV linear SVM. 
