--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/watcounts-design.png" class="img-responsive" alt="">
+                        <img src="images/watcounts.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -232,12 +232,12 @@
                         <div class="modal-body">
                             <h2>WatCounts</h2>
                             <hr class="star-primary">
-                            <img src="images/WatCounts.PNG" class="img-responsive img-centered" alt="">
+                            <img src="images/WatCounts design.PNG" class="img-responsive img-centered" alt="">
                             <p> WatCounts is an occupancy tracking application designed for the University of Waterloo. 
                                 The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
                                 I implemented human detection using the pre-trained OpenCV linear SVM. 
-                                I then wrote a centroid tracking algorithm to determine the direction each person was moving in and 
-                                register or deregister object IDs when needed.
+                                I then wrote a centroid tracking algorithm to determine the direction each person was moving in, and 
+                                register or deregister object IDs as needed.
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
