Updated project descriptions

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
                             <img src="images/WatCounts design.PNG" class="img-responsive img-centered" alt="">
                             <p> WatCounts is an occupancy tracking application designed for the University of Waterloo. 
                                 The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
-                                I implemented human detection using the pre-trained OpenCV linear SVM. 
-                                I then wrote a centroid tracking algorithm to determine the direction each person was moving in, and 
-                                register or deregister object IDs as needed.
+                                A mechanical enclosure was designed to hold the Pi and position the camera above the library door.
+                                I implemented human detection using the pre-trained OpenCV linear SVM, and I used a centroid tracking algorithm to determine the direction each person was moving in.
+                                The project was a success with over 90% tracking accuracy!
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
