--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/watcounts.png" class="img-responsive" alt="" height="">
+                        <img src="images/watcounts.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
