Fixed syntax error

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <div class="modal-body">
                             <h2>WatCounts</h2>
                             <hr class="star-primary">
-                            <img src="images/watcountsdesign.PNG" class="img-responsive img-centered" alt="">
+                            <img src="images/watcountsdesign.png" class="img-responsive img-centered" alt="">
                             <p> WatCounts is an occupancy tracking application designed for the University of Waterloo. 
                                 The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
                                 A mechanical enclosure was designed to hold the Pi and position the camera above the library door.
