Added Github repo links

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
                                 A mechanical enclosure was designed to hold the Pi and position the camera above the library door.
                                 I implemented human detection using the pre-trained OpenCV linear SVM, and I used a centroid tracking algorithm to determine the direction each person was moving in.
-                                The project was a success with over 90% tracking accuracy!
+                                The project was a success with over 90% tracking accuracy! View the code here: <a href="https://github.com/rebecca-butler/WatCounts">WatCounts</a>
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
