--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>I'm a fourth year Mechatronics Engineering student with experience in robotics, perception, and computer vision.
-                      I'm currently seeking a Summer 2021 co-op position. Don't hesitate to reach out if you want to chat with me!
+                      I'm currently seeking a full-time position with a start date in June 2022. Don't hesitate to reach out if you want to chat!
                       </p>
                 </div>
                 <div class="col-lg-4">
